--- a/index.html
+++ b/index.html
@@ -216,9 +216,104 @@
         </div>
         <div class="section-content">
           <div class="row">
-            <div class="col-md-6 faq-content wow fadeInUp" data-wow-delay="0.2s">
-              <h4></h4>
-              <p></p>
+            <div class="col-md-12">
+              <div class="col-md-12 faq-content wow fadeInUp" data-wow-delay="0.2s">
+                <div class="media double-feature wow fadeInUp" data-wow-delay="0.2s">
+                  <div class="media-body text-center media-center-margin">
+                    <img src="images/promo.png" width="500" height="350">
+                  </div>
+                </div>
+              <div class="col-md-12 faq-content wow fadeInUp" data-wow-delay="0.2s">
+                <table class="table table-striped table-hover table-dark">
+                  <thead>
+                    <tr style="color: #dd0000;">
+                      <th scope="col">#</th>
+                      <th scope="col">USŁUGA</th>
+                      <th scope="col">CENA</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <th scope="row">1</th>
+                      <td>Mycie detailingowe</td>
+                      <td>100zł</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">2</th>
+                      <td>Polerowanie reflektorów</td>
+                      <td>150zł</td>
+                    </tr>
+                    <tr >
+                      <th scope="row">3</th>
+                      <td>Jednoetapowa korekta lakieru (usunięcie około 50% zarysowań, odzyskanie  głębi koloru, na końcu zabezpieczenie lakieru woskiem)</td>
+                      <td>od 600zł</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">4</th>
+                      <td>Dwuetapowa korekta lakieru (usunięcie do 90% zarysowań, odzyskanie głębi koloru, na końcu zabezpieczenie lakieru woskiem)</td>
+                      <td>od 900zł</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">5</th>
+                      <td>Aplikacja wosku</td>
+                      <td>300zł</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">6</th>
+                      <td>Aplikacja powłoki ceramicznej 1 rok*</td>
+                      <td>500zł</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">7</th>
+                      <td>Aplikacja powłoki ceramicznej 3-5 lata*</td>
+                      <td>1500zł</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">8</th>
+                      <td>Serwis powłoki ceramicznej (zalecany raz na pół roku)</td>
+                      <td>300zł</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">9</th>
+                      <td>Aplikacja niewidzialnej wycieraczki - szyba czołowa</td>
+                      <td>100zł</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">10</th>
+                      <td>Aplikacja niewidzialnej wycieraczki - wszystkie szyby</td>
+                      <td>200zł</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">11</th>
+                      <td>Pranie tapicerki materiałowej</td>
+                      <td>200zł</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">12</th>
+                      <td>Czyszczenie skór z impregnacją</td>
+                      <td>250zł</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">13</th>
+                      <td>Kompleksowe czyszczenie wnętrza</td>
+                      <td>500zł</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">14</th>
+                      <td>Aplikacja powłoki kwarcowej</td>
+                      <td>400 zł</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">*</th>
+                      <td>Koszt aplikacji powłoki ceramicznej nie uwzględnia korekty lakieru, którą należy doliczyć</td>
+                      <td></td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+                <h4></h4>
+                <p></p>
+              </div>
             </div>
           </div>
         </div>
@@ -311,13 +406,13 @@
                     <x class="text-uppercase"><a class="text-white" href="tel:+48728974902">+48 728 974 902</a> </p>
                   </div>
                 </div>
-                <div class="contact-item media"> <i class="fa fa-envelope media-left media-right-margin"></i>
+                <div class="contact-item media"> <i class="fa fa-envelope media-left media-center-margin"></i>
                   <div class="media-body">
                     <p class="text-uppercase">E-mail</p>
                     <x class="text-uppercase"><a class="text-white" href="mailto:ciachiblysk@gmail.com">ciachiblysk@gmail.com</a> </p>
                   </div>
                 </div>
-                <div class="contact-item media"> <i class="fa fa-clock media-left media-right-margin"></i>
+                <div class="contact-item media"> <i class="fa fa-clock media-left media-center-margin"></i>
                   <div class="media-body">
                     <p class="text-uppercase">Godziny otwarcia</p>
                     <x class="text-uppercase">Pon - Pt 8:00 - 16:00</x>
