--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
         <div class="sectioner-header text-center white">
           <h8>ODWIEDŹ NASZE SOCIAL MEDIA!</h8>
           <span class="line2"></span>
-          <p class="white">Bądź na bierząco!</p>
+          <p class="white">Bądź na bieżąco!</p>
         </div>
       </div>
       <div class="col-md-12">
