--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <div class="col-md-12">
               <div class="col-md-12 faq-content wow fadeInUp" data-wow-delay="0.2s">
                 <div class="media double-feature wow fadeInUp" data-wow-delay="0.2s">
-                  <div class="rounded mx-auto d-block">
+                  <div class="media-body text-center media-center-margin">
                     <img src="images/promo.png" width="500" height="350">
                   </div>
                 </div>
