--- a/index.html
+++ b/index.html
@@ -218,11 +218,11 @@
           <div class="row">
             <div class="col-md-12">
               <div class="col-md-12 faq-content wow fadeInUp" data-wow-delay="0.2s">
-                <div class="media double-feature wow fadeInUp" data-wow-delay="0.2s">
-                  <div class="media-body text-center media-center-margin">
-                    <img src="images/promo.png" width="500" height="350">
+                <div class="media wow fadeInUp" data-wow-delay="0.2s">
+                  <div class="rounded mx-auto d-block">
+                    <img src="images/promo2.png"  width="600" height="600" style="max-width: 100%; height: auto;">
                   </div>
-                </div>
+              </div>
               <div class="col-md-12 faq-content wow fadeInUp" data-wow-delay="0.2s">
                 <table class="table table-striped table-hover table-dark">
                   <thead>
@@ -341,33 +341,33 @@
         <div class="col-md-6 col-sm-12">
           <div class="media single-feature wow fadeInUp" data-wow-delay="0.2s">
             <div class="media-body text-right media-right-margin">
-              <img src="images/4.jpg" width="400" height="400"></div>
+              <img src="images/4.jpg" width="400" height="400" style="max-width: 100%; height: auto;"></div>
           </div>
           <div class="media single-feature wow fadeInUp" data-wow-delay="0.2s">
             <div class="media-body text-right media-right-margin">
-              <img src="images/3.jpg" width="400" height="400">
+              <img src="images/3.jpg" width="400" height="400" style="max-width: 100%; height: auto;">
             </div>
           </div>
           <div class="media single-feature wow fadeInUp" data-wow-delay="0.2s">
             <div class="media-body text-right media-right-margin">
-              <img src="images/5.jpg" width="400" height="400">
+              <img src="images/5.jpg" width="400" height="400" style="max-width: 100%; height: auto;">
             </div>
           </div>
         </div>
         <div class="col-md-6 col-sm-12">
           <div class="media single-feature wow fadeInUp" data-wow-delay="0.4s">
             <div class="media-body text-left">
-              <img src="images/2.jpg" width="400" height="400">
+              <img src="images/2.jpg" width="400" height="400" style="max-width: 100%; height: auto;">
             </div>
           </div>
           <div class="media single-feature wow fadeInUp" data-wow-delay="0.4s">
             <div class="media-body text-left">
-              <img src="images/6.jpg" width="400" height="400">
+              <img src="images/6.jpg" width="400" height="400" style="max-width: 100%; height: auto;">
             </div>
           </div>
           <div class="media single-feature wow fadeInUp" data-wow-delay="0.4s">
             <div class="media-body text-left">
-              <img src="images/1.jpg" width="400" height="400">
+              <img src="images/1.jpg" width="400" height="400" style="max-width: 100%; height: auto;">
             </div>
           </div>
         </div>
@@ -390,7 +390,7 @@
         <div class="section-content">
           <div class="row">
             <div class="col-sm-8 col-md-8 col-lg-8">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d153218.26069599733!2d22.991260370176136!3d53.127511475821976!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471fffcf71301dbf%3A0xacae2b0187c31f06!2sCiachib%C5%82ysk.pl%20Auto%20detailing%2C%20Auto%20SPA%2C%20door-to-door!5e0!3m2!1spl!2spl!4v1694984771431!5m2!1spl!2spl" width="510" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d153218.26069599733!2d22.991260370176136!3d53.127511475821976!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471fffcf71301dbf%3A0xacae2b0187c31f06!2sCiachib%C5%82ysk.pl%20Auto%20detailing%2C%20Auto%20SPA%2C%20door-to-door!5e0!3m2!1spl!2spl!4v1694984771431!5m2!1spl!2spl" width="510" height="400" style="border:0; max-width: 100%;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" ></iframe>
             </div>
             <div class="col-sm-8 col-md-8 col-lg-4">
               <div class="contact-info white">
