--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
               <div class="col-md-12 faq-content wow fadeInUp" data-wow-delay="0.2s">
                 <div class="media wow fadeInUp" data-wow-delay="0.2s">
                   <div class="rounded mx-auto d-block">
-                    <img src="images/promo2.png"  width="600" height="600" style="max-width: 100%; height: auto;">
+                    <img src="images/promo.png"  width="600" height="600" style="max-width: 100%; height: auto;">
                   </div>
 		 <!-- <div class="rounded mx-auto d-block">
                     <img src="images/promo_black_friday.jpg"  width="600" height="600" style="max-width: 100%; height: auto;">
