--- a/index.html
+++ b/index.html
@@ -355,16 +355,16 @@
         <div class="col-md-6 col-sm-12">
           <div class="media single-feature wow fadeInUp" data-wow-delay="0.2s">
             <div class="media-body text-right media-right-margin">
-              <img src="images/22.jpeg" width="400" height="400" style="max-width: 100%; height: auto;"></div>
+              <img src="images/22.JPEG" width="400" height="400" style="max-width: 100%; height: auto;"></div>
           </div>
           <div class="media single-feature wow fadeInUp" data-wow-delay="0.2s">
             <div class="media-body text-right media-right-margin">
-              <img src="images/13.jpeg" width="400" height="400" style="max-width: 100%; height: auto;">
+              <img src="images/13.JPEG" width="400" height="400" style="max-width: 100%; height: auto;">
             </div>
           </div>
           <div class="media single-feature wow fadeInUp" data-wow-delay="0.2s">
             <div class="media-body text-right media-right-margin">
-              <img src="images/66.jpeg" width="400" height="400" style="max-width: 100%; height: auto;">
+              <img src="images/66.JPEG" width="400" height="400" style="max-width: 100%; height: auto;">
             </div>
           </div>
         </div>
@@ -376,12 +376,12 @@
           </div>
           <div class="media single-feature wow fadeInUp" data-wow-delay="0.4s">
             <div class="media-body text-left">
-              <img src="images/44.jpeg" width="400" height="400" style="max-width: 100%; height: auto;">
+              <img src="images/44.JPEG" width="400" height="400" style="max-width: 100%; height: auto;">
             </div>
           </div>
           <div class="media single-feature wow fadeInUp" data-wow-delay="0.4s">
             <div class="media-body text-left">
-              <img src="images/33.jpeg" width="400" height="400" style="max-width: 100%; height: auto;">
+              <img src="images/33.JPEG" width="400" height="400" style="max-width: 100%; height: auto;">
             </div>
           </div>
         </div>
