--- a/index.html
+++ b/index.html
@@ -274,52 +274,57 @@
                     </tr>
                     <tr>
                       <th scope="row">6</th>
-                      <td>Aplikacja powłoki ceramicznej 1 rok*</td>
+                      <td>Aplikacja powłoki ceramicznej rocznej*</td>
                       <td>500zł</td>
                     </tr>
                     <tr>
                       <th scope="row">7</th>
-                      <td>Aplikacja powłoki ceramicznej 3-5 lata*</td>
-                      <td>1500zł</td>
+                      <td>Aplikacja powłoki ceramicznej 3-letniej*</td>
+                      <td>od 1500zł</td>
                     </tr>
                     <tr>
                       <th scope="row">8</th>
+                      <td>Aplikacja powłoki ceramicznej 5-letniej*</td>
+                      <td>od 2000zł</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">9</th>
+                      <td>Aplikacja powłoki elastomerowej 5-letniej*</td>
+                      <td>od 3000zł</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">10</th>
                       <td>Serwis powłoki ceramicznej (zalecany raz na pół roku)</td>
                       <td>300zł</td>
                     </tr>
                     <tr>
-                      <th scope="row">9</th>
+                      <th scope="row">11</th>
                       <td>Aplikacja niewidzialnej wycieraczki - szyba czołowa</td>
                       <td>100zł</td>
                     </tr>
                     <tr>
-                      <th scope="row">10</th>
+                      <th scope="row">12</th>
                       <td>Aplikacja niewidzialnej wycieraczki - wszystkie szyby</td>
                       <td>200zł</td>
                     </tr>
                     <tr>
-                      <th scope="row">11</th>
+                      <th scope="row">13</th>
                       <td>Pranie tapicerki materiałowej</td>
                       <td>200zł</td>
                     </tr>
                     <tr>
-                      <th scope="row">12</th>
+                      <th scope="row">14</th>
                       <td>Czyszczenie skór z impregnacją</td>
                       <td>250zł</td>
                     </tr>
                     <tr>
-                      <th scope="row">13</th>
+                      <th scope="row">15</th>
                       <td>Kompleksowe czyszczenie wnętrza</td>
                       <td>500zł</td>
                     </tr>
                     <tr>
-                      <th scope="row">14</th>
-                      <td>Aplikacja powłoki kwarcowej</td>
-                      <td>400 zł</td>
-                    </tr>
-                    <tr>
                       <th scope="row">*</th>
-                      <td>Koszt aplikacji powłoki ceramicznej nie uwzględnia korekty lakieru, którą należy doliczyć</td>
+                      <td>Koszt aplikacji powłoki ceramicznej/elastomerowej nie uwzględnia korekty lakieru, którą należy doliczyć</td>
                       <td></td>
                     </tr>
                   </tbody>
