--- a/index.html
+++ b/index.html
@@ -320,11 +320,16 @@
                     <tr>
                       <th scope="row">15</th>
                       <td>Kompleksowe czyszczenie wnętrza</td>
-                      <td>500zł</td>
+                      <td>od 500zł</td>
                     </tr>
                     <tr>
                       <th scope="row">*</th>
                       <td>Koszt aplikacji powłoki ceramicznej/elastomerowej nie uwzględnia korekty lakieru, którą należy doliczyć</td>
+                      <td></td>
+                    </tr>
+		    <tr>
+                      <th scope="row"></th>
+                      <td>Przedstawione ceny są cenami netto!</td>
                       <td></td>
                     </tr>
                   </tbody>
