--- a/index.html
+++ b/index.html
@@ -327,15 +327,10 @@
                       <td>Koszt aplikacji powłoki ceramicznej/elastomerowej nie uwzględnia korekty lakieru, którą należy doliczyć</td>
                       <td></td>
                     </tr>
-		    <tr>
-                      <th scope="row"></th>
-                      <td>Przedstawione ceny są cenami netto!</td>
-                      <td></td>
-                    </tr>
                   </tbody>
                 </table>
               </div>
-                <h4></h4>
+                <h5>Przedstawione ceny są cenami netto!</h5>
                 <p></p>
               </div>
             </div>
