--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
 <body>
 
-<div id="popup">
+<!-- <div id="popup">
     <span id="popupclose">X</span>
     <div class="popupcontent">
     </div>
-</div>
+</div> -->
 
 
 <!-- Navbar -->
@@ -571,3 +571,4 @@ $(window).on("load",function (){
 </script>
 </body>
 </html>
+
