--- a/index.html
+++ b/index.html
@@ -323,14 +323,14 @@
                       <td>od 500zł</td>
                     </tr>
                     <tr>
-                      <th scope="row">*</th>
-                      <td>Koszt aplikacji powłoki ceramicznej/elastomerowej nie uwzględnia korekty lakieru, którą należy doliczyć</td>
+                      <th scope="row" style="color: gold;">*</th>
+                      <td style="color: gold;">Koszt aplikacji powłoki ceramicznej/elastomerowej nie uwzględnia korekty lakieru, którą należy doliczyć</td>
                       <td></td>
                     </tr>
                   </tbody>
                 </table>
               </div>
-                <h5>Przedstawione ceny są cenami netto!</h5>
+                <h5 style="text-align: center;">Przedstawione ceny są cenami netto!</h5>
                 <p></p>
               </div>
             </div>
@@ -386,43 +386,58 @@
 <section class="contact section-padding" data-scroll-index='6'>
   <div class="container">
     <div class="row">
-      <div class="col-md-12">
-        <div class="sectioner-header text-center">
+      <div class="col-md-12 text-center">
+        <div class="sectioner-header">
           <h3>KONTAKT</h3>
           <span class="line"></span>
         </div>
-        <div class="section-content">
-          <div class="row">
-            <div class="col-sm-8 col-md-8 col-lg-8">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d153218.26069599733!2d22.991260370176136!3d53.127511475821976!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471fffcf71301dbf%3A0xacae2b0187c31f06!2sCiachib%C5%82ysk.pl%20Auto%20detailing%2C%20Auto%20SPA%2C%20door-to-door!5e0!3m2!1spl!2spl!4v1694984771431!5m2!1spl!2spl" width="510" height="400" style="border:0; max-width: 100%;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" ></iframe>
+      </div>
+    </div>
+
+    <div class="row align-items-center justify-content-center">
+      <!-- Mapa -->
+      <div class="col-lg-6 col-md-10 mb-4 mb-lg-0">
+        <div class="map-container shadow-lg rounded overflow-hidden">
+          <iframe 
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d153218.26069599733!2d22.991260370176136!3d53.127511475821976!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471fffcf71301dbf%3A0xacae2b0187c31f06!2sCiachib%C5%82ysk.pl%20Auto%20detailing%2C%20Auto%20SPA%2C%20door-to-door!5e0!3m2!1spl!2spl!4v1694984771431!5m2!1spl!2spl"
+            width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
+        </div>
+      </div>
+
+      <!-- Dane kontaktowe -->
+      <div class="col-lg-5 col-md-10">
+        <div class="contact-box p-4 rounded text-white">
+          <div class="contact-item mb-4">
+            <i class="fa fa-map-marker-alt fa-lg"></i>
+            <div class="contact-text">
+              <p class="font-weight-bold mb-1">Adres</p>
+              <p class="mb-0">Pomocna 2a, 15-182 Białystok</p>
             </div>
-            <div class="col-sm-8 col-md-8 col-lg-4">
-              <div class="contact-info white">
-                <div class="contact-item media"> <i class="fa fa-map-marker-alt media-left media-right-margin"></i>
-                  <div class="media-body">
-                    <p class="text-uppercase">Adres</p>
-                    <x class="text-uppercase">Pomocna 2a, 15-182 Białystok</x>
-                  </div>
-                </div>
-                <div class="contact-item media"> <i class="fa fa-mobile media-left media-right-margin"></i>
-                  <div class="media-body">
-                    <p class="text-uppercase">Telefon</p>
-                    <x class="text-uppercase"><a class="text-white" href="tel:+48728974902">+48 728 974 902</a> </p>
-                  </div>
-                </div>
-                <div class="contact-item media"> <i class="fa fa-envelope media-left media-center-margin"></i>
-                  <div class="media-body">
-                    <p class="text-uppercase">E-mail</p>
-                    <x class="text-uppercase"><a class="text-white" href="mailto:ciachiblysk@gmail.com">ciachiblysk@gmail.com</a> </p>
-                  </div>
-                </div>
-                <div class="contact-item media"> <i class="fa fa-clock media-left media-center-margin"></i>
-                  <div class="media-body">
-                    <p class="text-uppercase">Godziny otwarcia</p>
-                    <x class="text-uppercase">Pon - Pt 8:00 - 16:00</x>
-                  </div>
-                </div>
-              </div>
+          </div>
+
+          <div class="contact-item mb-4">
+            <i class="fa fa-phone fa-lg"></i>
+            <div class="contact-text">
+              <p class="font-weight-bold mb-1">Telefon</p>
+              <p class="mb-0"><a href="tel:+48728974902" class="text-white">+48 728 974 902</a></p>
+            </div>
+          </div>
+
+          <div class="contact-item mb-4">
+            <i class="fa fa-envelope fa-lg"></i>
+            <div class="contact-text">
+              <p class="font-weight-bold mb-1">E-mail</p>
+              <p class="mb-0"><a href="mailto:ciachiblysk@gmail.com" class="text-white">ciachiblysk@gmail.com</a></p>
+            </div>
+          </div>
+
+          <div class="contact-item">
+            <i class="fa fa-clock fa-lg"></i>
+            <div class="contact-text">
+              <p class="font-weight-bold mb-1">Godziny otwarcia</p>
+              <p class="mb-0">Pon – Pt 8:00 – 16:00</p>
             </div>
           </div>
         </div>
@@ -431,10 +446,12 @@
   </div>
 </section>
 
+
+
 <!-------Contact End-------> 
 
 <!-------Download End------->
-<section class="download section-padding">
+<section class="social section-padding">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
@@ -447,9 +464,9 @@
       <div class="col-md-12">
         <div class="section-content text-center">
           <ul>
-            <li><a href="https://www.instagram.com/ciachiblysk/"><img src="images/instagram.png" class="wow fadeInUp" data-wow-delay="0.4s"/></a></li>
-            <li><a href="https://www.facebook.com/Ciachiblysk"><img src="images/facebook.png" class="wow fadeInUp" data-wow-delay="0.7s"/></a></li>
-            <li><a href="https://www.tiktok.com/@ciachiblysk?lang=pl-PL"><img src="images/tiktok.png" class="wow fadeInUp" data-wow-delay="1s"/></a></li>          
+            <li><a href="https://www.instagram.com/ciachiblysk/"><img src="images/instagram.png" alt="Instagram" class="wow fadeInUp" data-wow-delay="0.4s"></a></li>
+            <li><a href="https://www.facebook.com/Ciachiblysk"><img src="images/facebook.png" alt="Facebook" class="wow fadeInUp" data-wow-delay="0.7s"></a></li>
+            <li><a href="https://www.tiktok.com/@ciachiblysk?lang=pl-PL"><img src="images/tiktok.png" alt="TikTok" class="wow fadeInUp" data-wow-delay="1s"></a></li>
           </ul>
         </div>
       </div>
@@ -457,23 +474,7 @@
   </div>
 </section>
 
-<!-----CALL TO ACTION Button-->
-<div class="mobile-cta">
-  <button id="ctaButton">
-    <i class="fa fa-phone"></i> Skontaktuj się
-  </button>
-</div>
 
-<!-- Modal CTA -->
-<div id="ctaModal" class="cta-modal">
-  <div class="cta-modal-content">
-    <h5>Skontaktuj się z nami</h5>
-    <p>Wybierz, co chcesz zrobić:</p>
-    <a href="tel:+48728974902" class="cta-option call">📞 Zadzwoń teraz</a>
-    <a href="kontakt.vcf" class="cta-option save" download>💾 Dodaj kontakt</a>
-    <button id="closeCtaModal" class="cta-close">Anuluj</button>
-  </div>
-</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> 
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script> 
@@ -548,35 +549,6 @@
   });
 </script>
 
-<script>
-  // CTA popup
-  const ctaButton = document.getElementById('ctaButton');
-  const ctaModal = document.getElementById('ctaModal');
-  const closeCtaModal = document.getElementById('closeCtaModal');
-
-  if (ctaButton) {
-    ctaButton.addEventListener('click', () => {
-      ctaModal.style.display = 'flex';
-    });
-  }
-
-  if (closeCtaModal) {
-    closeCtaModal.addEventListener('click', () => {
-      ctaModal.style.display = 'none';
-    });
-  }
-
-  window.addEventListener('click', (e) => {
-    if (e.target === ctaModal) {
-      ctaModal.style.display = 'none';
-    }
-  });
-</script>
-
-
-
-
 </body>
 </html>
-
 
