--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="style.css"/>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- Font Google -->
 <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -464,9 +465,9 @@
       <div class="col-md-12">
         <div class="section-content text-center">
           <ul>
-            <li><a href="https://www.instagram.com/ciachiblysk/"><img src="images/instagram.png" alt="Instagram" class="wow fadeInUp" data-wow-delay="0.4s"></a></li>
-            <li><a href="https://www.facebook.com/Ciachiblysk"><img src="images/facebook.png" alt="Facebook" class="wow fadeInUp" data-wow-delay="0.7s"></a></li>
-            <li><a href="https://www.tiktok.com/@ciachiblysk?lang=pl-PL"><img src="images/tiktok.png" alt="TikTok" class="wow fadeInUp" data-wow-delay="1s"></a></li>
+            <li><a href="https://www.instagram.com/ciachiblysk/"><img src="images/instagram.png"></a></li>
+            <li><a href="https://www.facebook.com/Ciachiblysk"><img src="images/facebook.png"></a></li>
+            <li><a href="https://www.tiktok.com/@ciachiblysk?lang=pl-PL"><img src="images/tiktok.png"></a></li>
           </ul>
         </div>
       </div>
