--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
       <div class="col-lg-5 col-md-10">
         <div class="contact-box p-4 rounded text-white">
           <div class="contact-item mb-4">
-            <i class="fa fa-map-marker-alt fa-lg"></i>
+            <i class="fa fa-map-marker fa-lg"></i>
             <div class="contact-text">
               <p class="font-weight-bold mb-1">Adres</p>
               <p class="mb-0">Pomocna 2a, 15-182 Białystok</p>
@@ -552,4 +552,5 @@
 
 </body>
 </html>
+
 
