--- a/index.html
+++ b/index.html
@@ -131,26 +131,26 @@
                   <h5>Korekta Lakieru</h5>
                   <p>Renowacja lakieru i usunięcie rys, powstałych w wyniku codziennej eksploatacji auta. Polerowanie wydobywa głębię koloru i zapewnia połysk lakieru Twojego auta tak, żeby zawsze wyglądało jak po wyjeździe z salonu.</p>
                 </div>
-                <div class="media-right icon-border"> <span class="fa fa-paint-roller" aria-hidden="true"></span> </div>
+                <div class="media-right icon-border"> <span class="fas fa-paint-roller" aria-hidden="true"></span> </div>
               </div>
               <div class="media single-feature wow fadeInUp" data-wow-delay="0.4s">
                 <div class="media-body text-right media-right-margin">
                   <h5>Powłoki ceramiczne</h5>
                   <p>Zabezpieczymy Twoje auto powłoką ceramiczną, która stanowi warstwę ochronną dla lakieru pojazdu. Co za tym idzie samochód znacznie mniej się rysuje, a sól nie niszczy zimą lakieru i felg. Na dodatek brud dużo mniej trzyma się auta, więc łatwiej go umyć.</p>
                 </div>
-                <div class="media-right icon-border"> <span class="fa fa-shield-alt" aria-hidden="true"></span> </div>
+                <div class="media-right icon-border"> <span class="fas fa-shield-alt" aria-hidden="true"></span> </div>
               </div>
             </div>
             <div class="col-md-6 col-sm-12">
               <div class="media single-feature wow fadeInUp" data-wow-delay="0.2s">
-                <div class="media-left icon-border media-right-margin"> <span class="fa fa-shower" aria-hidden="true"></span> </div>
+                <div class="media-left icon-border media-right-margin"> <span class="fas fa-shower" aria-hidden="true"></span> </div>
                 <div class="media-body text-left">
                   <h5>Mycie detailingowe i woskowanie</h5>
                   <p>Dokładna, codzienna pielęgnacja Twojego auta, czyli profesjonalne mycie, które nie powoduje niszczenia lakieru, a zarazem bardzo dokładnie doczyszcza każdy element. Na koniec każdej operacji, możemy również zabezpieczyć Twoje auto.</p>
                 </div>
               </div>
               <div class="media single-feature wow fadeInUp" data-wow-delay="0.4s">
-                <div class="media-left icon-border media-right-margin"> <span class="fa fa-broom" aria-hidden="true"></span> </div>
+                <div class="media-left icon-border media-right-margin"> <span class="fas fa-broom" aria-hidden="true"></span> </div>
                 <div class="media-body text-left">
                   <h5>Czyszczenie wnętrza</h5>
                   <p>Zajmiemy się wnętrzem Twojego pojazdu, by przywrócić mu jego naturalny blask. Wyczyścimy i zaimpregnujemy tapicerkę skórzaną, wypierzemy tapicerki tekstylne oraz wyczyścimy każde miejsce, na którym widać skutki codziennej eksploatacji.</p>
@@ -552,5 +552,6 @@
 
 </body>
 </html>
+
 
 
